--- a/index.html
+++ b/index.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finley Efficient Solutions</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Finley Efficient Solutions</h1>
-    <p>Driving process improvement through data-driven efficiency</p>
+    <nav class="navbar">
+      <h1 class="logo">Finley Efficient Solutions</h1>
+      <ul class="nav-links">
+        <li><a href="#overview">Overview</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="hero">
+      <div class="hero-content">
+        <h2>Innovative Solutions for a Smarter Future</h2>
+        <p>Specializing in efficiency, quality, and organizational excellence.</p>
+        <a href="#overview" class="btn-primary">Learn More</a>
+      </div>
+    </section>
   </header>
 
-  <section class="overview">
-    <h2>Overview</h2>
-    <p><strong>Specialization in:</strong></p>
-    <ul>
-      <li>8D and A3 Problem Solving methodologies</li>
-      <li>Digital Six Sigma and Design For Six Sigma Frameworks</li>
-      <li>Organizational Change Management</li>
-      <li>Automotive Hardware and Software Systems</li>
-      <li>Telecommunications Networks</li>
-      <li>Customer Satisfaction</li>
-      <li>Quality Management</li>
-      <li>Electronic Product Manufacturing</li>
-      <li>AI Data Analysis</li>
-    </ul>
-  </section>
+  <main>
+    <section id="overview" class="section light">
+      <h2>Overview</h2>
+      <p>Finley Efficient Solutions specializes in driving operational excellence and sustainable growth across industries.</p>
+      <ul>
+        <li>8D and A3 Problem Solving methodologies</li>
+        <li>Digital Six Sigma and Design for Six Sigma Frameworks</li>
+        <li>Organizational Change Management</li>
+        <li>Automotive Hardware and Software Systems</li>
+        <li>Telecommunications Networks</li>
+        <li>Customer Satisfaction & Quality Management</li>
+        <li>Electronic Product Manufacturing</li>
+        <li>AI Data Analysis</li>
+      </ul>
+    </section>
+
+    <section id="services" class="section dark">
+      <h2>Our Services</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Process Optimization</h3>
+          <p>We identify inefficiencies and implement Lean and Six Sigma frameworks to enhance productivity and quality.</p>
+        </div>
+        <div class="card">
+          <h3>Systems Engineering</h3>
+          <p>Comprehensive support for automotive, electronic, and software systems to improve performance and reliability.</p>
+        </div>
+        <div class="card">
+          <h3>Data & AI Analytics</h3>
+          <p>Turning complex data into actionable insights to support smarter decisions and stronger results.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section light">
+      <h2>Contact Us</h2>
+      <p>Interested in working together or learning more? Let’s connect.</p>
+      <a href="mailto:info@finleyefficientsolutions@gmail.com" class="btn-primary">Email Us</a>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Finley Efficient Solutions | <a href="mailto:contact@finleyefficient.com">Contact Us</a></p>
+    <p>© 2025 Finley Efficient Solutions. All rights reserved.</p>
   </footer>
 </body>
 </html>
