--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finley Efficient Solutions</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -17,6 +18,7 @@
       </ul>
     </nav>
     <section class="hero">
+      <div class="hero-overlay"></div>
       <div class="hero-content">
         <h2>Innovative Solutions for a Smarter Future</h2>
         <p>Specializing in efficiency, quality, and organizational excellence.</p>
@@ -26,9 +28,8 @@
   </header>
 
   <main>
-    <section id="overview" class="section light">
+    <section id="overview" class="section light fade-in">
       <h2>Overview</h2>
-      <p>Finley Efficient Solutions specializes in driving operational excellence and sustainable growth across industries.</p>
       <ul>
         <li>8D and A3 Problem Solving methodologies</li>
         <li>Digital Six Sigma and Design for Six Sigma Frameworks</li>
@@ -41,7 +42,7 @@
       </ul>
     </section>
 
-    <section id="services" class="section dark">
+    <section id="services" class="section gradient fade-in">
       <h2>Our Services</h2>
       <div class="cards">
         <div class="card">
@@ -59,10 +60,10 @@
       </div>
     </section>
 
-    <section id="contact" class="section light">
+    <section id="contact" class="section light fade-in">
       <h2>Contact Us</h2>
       <p>Interested in working together or learning more? Let’s connect.</p>
-      <a href="mailto:info@finleyefficientsolutions@gmail.com" class="btn-primary">Email Us</a>
+      <a href="mailto:info@finleyefficientsolutions.com" class="btn-primary">Email Us</a>
     </section>
   </main>
 
