--- a/index.html
+++ b/index.html
@@ -3,72 +3,72 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finley Efficient Solutions</title>
+  <title>Finley Consulting</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <h1 class="logo">Finley Efficient Solutions</h1>
-      <ul class="nav-links">
-        <li><a href="#overview">Overview</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <section class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-content">
-        <h2>Innovative Solutions for a Smarter Future</h2>
-        <p>Specializing in efficiency, quality, and organizational excellence.</p>
-        <a href="#overview" class="btn-primary">Learn More</a>
-      </div>
-    </section>
+    <div class="container">
+      <h1 class="logo">Finley Consulting</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <section id="overview" class="section light fade-in">
-      <h2>Overview</h2>
-      <ul>
-        <li>8D and A3 Problem Solving methodologies</li>
-        <li>Digital Six Sigma and Design for Six Sigma Frameworks</li>
-        <li>Organizational Change Management</li>
-        <li>Automotive Hardware and Software Systems</li>
-        <li>Telecommunications Networks</li>
-        <li>Customer Satisfaction & Quality Management</li>
-        <li>Electronic Product Manufacturing</li>
-        <li>AI Data Analysis</li>
-      </ul>
-    </section>
+  <section id="hero">
+    <div class="hero-content">
+      <h2>Empowering Businesses with Data-Driven Insights</h2>
+      <p>Professional consulting to optimize strategy, performance, and technology.</p>
+      <a href="#contact" class="btn-primary">Get in Touch</a>
+    </div>
+  </section>
 
-    <section id="services" class="section gradient fade-in">
-      <h2>Our Services</h2>
-      <div class="cards">
-        <div class="card">
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About</h2>
+      <p>
+        Finley Consulting provides data-driven business solutions designed to
+        help organizations reach their full potential. We bring clarity,
+        structure, and innovation to every project.
+      </p>
+    </div>
+  </section>
+
+  <section id="services" class="section">
+    <div class="container">
+      <h2>Services</h2>
+      <ul class="services-list">
+        <li>
+          <h3>Data Strategy</h3>
+          <p>Transform your business with smart data solutions and analytics.</p>
+        </li>
+        <li>
           <h3>Process Optimization</h3>
-          <p>We identify inefficiencies and implement Lean and Six Sigma frameworks to enhance productivity and quality.</p>
-        </div>
-        <div class="card">
-          <h3>Systems Engineering</h3>
-          <p>Comprehensive support for automotive, electronic, and software systems to improve performance and reliability.</p>
-        </div>
-        <div class="card">
-          <h3>Data & AI Analytics</h3>
-          <p>Turning complex data into actionable insights to support smarter decisions and stronger results.</p>
-        </div>
-      </div>
-    </section>
+          <p>Streamline workflows and improve operational efficiency.</p>
+        </li>
+        <li>
+          <h3>Technology Integration</h3>
+          <p>Modernize systems with scalable and secure digital solutions.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
 
-    <section id="contact" class="section light fade-in">
-      <h2>Contact Us</h2>
-      <p>Interested in working together or learning more? Let’s connect.</p>
-      <a href="mailto:info@finleyefficientsolutions.com" class="btn-primary">Email Us</a>
-    </section>
-  </main>
+  <section id="contact" class="section contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Let’s discuss how we can help your business grow.</p>
+      <a href="mailto:contact@finleyconsulting.com" class="btn-secondary">Email Us</a>
+    </div>
+  </section>
 
   <footer>
-    <p>© 2025 Finley Efficient Solutions. All rights reserved.</p>
+    <p>© 2025 Finley Consulting. All rights reserved.</p>
   </footer>
 </body>
 </html>
