--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finley Consulting</title>
+  <title>Finley Efficient Solutions</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1 class="logo">Finley Consulting</h1>
+      <h1 class="logo">Finley Efficient Solutions</h1>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -32,7 +32,7 @@
     <div class="container">
       <h2>About</h2>
       <p>
-        Finley Consulting provides data-driven business solutions designed to
+        Finley Efficient Solutions provides structured problem-solving consulting services based on 8D and A3 methodologies, and Six Sigma Frameworks. designed to
         help organizations reach their full potential. We bring clarity,
         structure, and innovation to every project.
       </p>
@@ -41,19 +41,34 @@
 
   <section id="services" class="section">
     <div class="container">
-      <h2>Services</h2>
+      <h2>Overview</h2>
       <ul class="services-list">
         <li>
-          <h3>Data Strategy</h3>
-          <p>Transform your business with smart data solutions and analytics.</p>
+          <h3>8D and A3 Problem Solving methodologies</h3>
         </li>
         <li>
-          <h3>Process Optimization</h3>
-          <p>Streamline workflows and improve operational efficiency.</p>
+          <h3>Digital Six Sigma and Design For Six Sigma Frameworks</h3>
         </li>
         <li>
-          <h3>Technology Integration</h3>
-          <p>Modernize systems with scalable and secure digital solutions.</p>
+          <h3>Organizational Change Management</h3>
+        </li>
+        <li>
+          <h3>Automotive Hardware and Software Systems</h3>
+        </li>
+        <li>
+          <h3>Telecommunications Networks</h3>
+        </li>
+        <li>
+          <h3>Customer Satisfaction</h3>
+        </li>
+        <li>
+          <h3>Quality Management</h3>
+        </li>
+        <li>
+          <h3>Electronic product manufacturing</h3>
+        </li>
+        <li>
+          <h3>AI data analysis</h3>
         </li>
       </ul>
     </div>
@@ -63,12 +78,12 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Let’s discuss how we can help your business grow.</p>
-      <a href="mailto:contact@finleyconsulting.com" class="btn-secondary">Email Us</a>
+      <a href="mailto:contact@finleyefficientsolutions@gmail.com" class="btn-secondary">Email Us</a>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Finley Consulting. All rights reserved.</p>
+    <p>© 2025 Finley Efficient Solutions. All rights reserved.</p>
   </footer>
 </body>
 </html>
