--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Let’s discuss how we can help your business grow.</p>
-      <a href="mailto:contact@finleyefficientsolutions@gmail.com" class="btn-secondary">Email Us</a>
+      <a href="mailto:@finleyefficientsolutions@gmail.com" class="btn-secondary">Email Us</a>
     </div>
   </section>
 
