--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <section id="hero">
     <div class="hero-content">
-      <h2>Empowering Businesses with Data-Driven Insights</h2>
-      <p>Professional consulting to optimize strategy, performance, and technology.</p>
+      <h2>Empowering Businesses with Structured Problem Solving</h2>
+      <p>Professional consulting to efficiently solve problems.</p>
       <a href="#contact" class="btn-primary">Get in Touch</a>
     </div>
   </section>
@@ -32,16 +32,15 @@
     <div class="container">
       <h2>About</h2>
       <p>
-        Finley Efficient Solutions provides structured problem-solving consulting services based on 8D and A3 methodologies, and Six Sigma Frameworks. designed to
-        help organizations reach their full potential. We bring clarity,
-        structure, and innovation to every project.
+        Finley Efficient Solutions provides structured problem-solving consulting services based on 8D and A3 methodologies, and Six Sigma Frameworks. Commited to
+        collabortate with and coach organizations to solve their most challenging problems.
       </p>
     </div>
   </section>
 
   <section id="services" class="section">
     <div class="container">
-      <h2>Overview</h2>
+      <h2>Expertise</h2>
       <ul class="services-list">
         <li>
           <h3>8D and A3 Problem Solving methodologies</h3>
